# PhantasyEngineTestbed

./: .gitignore  CMakeLists.txt  GenBuildFiles.bat  GenBuildFilesWithCUDA.bat  LICENSE_PHANTASY_ENGINE  README.md
cmake/: FindSDL modules information.txt
resources/models/: sphere.mtl
resources/models/skysphere/: skysphere.mtl  skysphere.tga
resources/models/sponzaPBR/: sponzaPBR.mtl
resources/shaders/: cuda_transfer.frag  cudaaaa.frag  gamma_correction.frag  gbuffer_gen.frag  gbuffer_gen.vert  rgbaf32_to_rgbu8.frag  scaling.frag  shading.frag  taa.frag  temp_shader.vert  transfer.frag  velocity_gen.frag
resources/shaders/cuda_tracer_renderer/: cuda_gl_shadow_map_gen.frag  cuda_gl_shadow_map_gen.geom  gbuffer_gen.frag  gbuffer_gen.vert  transfer.frag
resources/shaders/deferred_renderer/: gbuffer_gen.frag  gbuffer_gen.vert  gbuffer_material_gen.frag  shading.frag  shadow_map_gen.frag  shadow_map_gen.vert  write_depth.frag
runtime/windows/: CREATE_RESOURCES_SYMLINKS.BAT
source/: Config.hpp  Main.cpp  Renderers.hpp  Resources.hpp  Screens.hpp
source/config/: GlobalConfig.cpp  GlobalConfig.hpp  Setting.cpp  Setting.hpp
source/cuda_ray_tracer/: BVHTraversal.cuh  CUDATest.cu  CUDATest.cuh  CudaArray.hpp  CudaBindlessTexture.cpp  CudaBindlessTexture.hpp  CudaBuffer.hpp  CudaDeviceHelpers.cuh  CudaGLInterop.cpp  CudaGLInterop.hpp  CudaHelpers.hpp  CudaPbr.cuh  CudaRayTracerRenderer.cpp  CudaRayTracerRenderer.hpp  CudaSfzVectorCompatibility.cuh  CudaTextureBuffer.hpp  CudaTracer.cu  CudaTracer.cuh  CudaTracerEntry.cu  CudaTracerEntry.cuh  CudaTracerRenderer.cpp  CudaTracerRenderer.hpp  CudaVectorHelpers.cuh  GBufferRead.cuh  Morton.cuh  RayCastKernel.cu  RayCastKernel.cuh  ShadowCubeMapCudaGL.cpp  ShadowCubeMapCudaGL.hpp
source/cuda_ray_tracer/deprecated/: BVHTraversal.cuh  CudaTracer.cu  CudaTracer.cuh
source/cuda_ray_tracer/kernels/: GenSecondaryRaysKernel.cu  GenSecondaryRaysKernel.hpp  GenSecondaryShadowRaysKernel.cu  GenSecondaryShadowRaysKernel.hpp  InitCurandKernel.cu  InitCurandKernel.hpp  InterpretRayHitKernel.cu  InterpretRayHitKernel.hpp  MaterialKernel.cu  MaterialKernel.hpp  PetorShading.cu  PetorShading.hpp  ProcessGBufferKernel.cu  ProcessGBufferKernel.hpp  RayCastKernel.cu  RayCastKernel.hpp  ShadeSecondaryHit.cu  ShadeSecondaryHit.hpp
source/level/: PointLight.hpp
source/phantasy_engine/: CPUTracerRenderer.hpp  Config.hpp  DeferredRenderer.hpp  ECS.hpp  PhantasyEngine.cpp  PhantasyEngine.hpp  RayTracerCommon.hpp  Renderers.hpp  Resources.hpp  Screens.hpp  Sound.hpp
source/phantasy_engine/config/: GlobalConfig.cpp  GlobalConfig.hpp  Setting.cpp  Setting.hpp
source/phantasy_engine/cpu_tracer_renderer/: CPUTracerRenderer.cpp  CPUTracerRenderer.hpp
source/phantasy_engine/deferred_renderer/: DeferredRenderer.cpp  DeferredRenderer.hpp  GLModel.cpp  GLModel.hpp  GLTexture.cpp  GLTexture.hpp  GLTextureArray.hpp  SSBO.cpp  SSBO.hpp  ShadowCubeMap.cpp  ShadowCubeMap.hpp
source/phantasy_engine/ecs/: EcsComponentAccessor.hpp  EcsWrapper.cpp  EcsWrapper.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  SceneGraph.cpp  SceneGraph.hpp
source/phantasy_engine/geometry/: Ray.hpp  Ray.inl
source/phantasy_engine/level/: DynObject.hpp  EcsComponentAccessor.hpp  EcsWrapper.cpp  EcsWrapper.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  Level.hpp  ObjectLoader.cpp  ObjectLoader.hpp  PointLight.hpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SphereLight.hpp  SponzaLoader.cpp  SponzaLoader.hpp  StaticScene.cpp  StaticScene.hpp
source/phantasy_engine/ray_tracer_common/: BVH.cpp  BVH.hpp  BVHCacheOptimizer.cpp  BVHCacheOptimizer.hpp  BVHMetrics.cpp  BVHMetrics.hpp  BVHNode.hpp  BVHSanitizer.cpp  BVHSanitizer.hpp  BVHTraversal.hpp  DynamicBVH.cpp  DynamicBVH.hpp  GenerateRays.cpp  GenerateRays.hpp  Intersection.hpp  Ray.hpp  RayTracerCommonSharedHeader.hpp  Shading.hpp  StaticBVHBuilder.cpp  StaticBVHBuilder.hpp  Triangle.hpp
source/phantasy_engine/renderers/: BaseRenderer.hpp  CPURayTracerRenderer.cpp  CPURayTracerRenderer.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  FullscreenTriangle.cpp  FullscreenTriangle.hpp  ViewFrustum.cpp  ViewFrustum.hpp
source/phantasy_engine/renderers/cpu_ray_tracer/: AabbTree.cpp  AabbTree.hpp  BVH.cpp  BVH.hpp  (+4 more)
source/phantasy_engine/rendering/: BaseRenderer.hpp  FullscreenTriangle.cpp  FullscreenTriangle.hpp  Material.hpp  RawGeometry.hpp  RawImage.cpp  RawImage.hpp  RawMesh.hpp  RenderComponent.hpp  ViewFrustum.cpp  ViewFrustum.hpp
source/phantasy_engine/resources/: GLModel.cpp  GLModel.hpp  GLTexture.cpp  GLTexture.hpp  RawGeometry.hpp  RawImage.cpp  RawImage.hpp  Renderable.cpp  Renderable.hpp
source/phantasy_engine/sbvh-stuff/: Array.h  BVH.cpp  BVH.h  BVHNode.cpp  BVHNode.h  Scene.h  Sort.cpp  Sort.h  SplitBVHBuilder.cpp  SplitBVHBuilder.h  Util.cpp  Util.h
source/phantasy_engine/screens/: GameScreen.cpp  GameScreen.hpp  LevelSelectScreen.cpp  LevelSelectScreen.hpp
source/phantasy_engine/sound/: Music.cpp  SoundEffect.cpp  SoundSession.cpp  SoundSession.hpp
source/phantasy_engine/util/: IOUtil.cpp  IOUtil.hpp
source/renderers/: BaseRenderer.hpp  CUDARayTracer.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  FullscreenTriangle.cpp
source/renderers/cpu_ray_tracer/: AabbTree.cpp  AabbTree.hpp  CPURayTracerRenderer.cpp  CPURayTracerRenderer.hpp
source/renderers/cuda_ray_tracer/: CUDAGLTexture.cpp  CUDAGLTexture.hpp  CUDATest.cu  CUDATest.cuh  CudaRayTracerRenderer.cpp  CudaRayTracerRenderer.hpp  errorCheck.cuh  hello_world.cu
source/resources/: GLMaterial.hpp  GLModel.hpp  GLTexture.hpp  RawGeometry.hpp  RawImage.cpp  RawImage.hpp  RawMaterial.hpp  RawModel.cpp  RawModel.hpp  Renderable.cpp  Renderable.hpp
source/screens/: GameScreen.cpp  GameScreen.hpp  LevelSelectScreen.cpp
source/testbed_application/: Helpers.cpp  Helpers.hpp  Main.cpp  TestbedLogic.cpp  TestbedLogic.hpp
source/util/: IOUtil.cpp
tests/: Main_Tests.cpp
tests/level/: EntityComponentSystem_Tests.cpp
tests/renderers/: ViewFrustum_Tests.cpp
tests/renderers/cpu_ray_tracer/: BVH_Tests.cpp
